[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone_arc_core"
version = "0.0.1"
dependencies = []
authors = [
    { name = "DEVILENMO", email = "DEVILENMO@gmail.com" },
]
description = "Core of ARC plugin series."

[project.entry-points."endstone"]
arc_core = "endstone_arc_core:ARCCorePlugin"